--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   <?php include 'index.php';?>
 	<div id="header">
 		<a href="index.html" class="logo">
-			<img src="images/cef1.png" alt="">
+			<img src="images/cef.png" alt="">
 		</a>
 		<ul id="navigation">
 			<li>
