--- a/blog-single-post2.html
+++ b/blog-single-post2.html
@@ -12,7 +12,7 @@
 <body>
 	<div id="header">
 		<a href="index.html" class="logo">
-			<img src="images/cef1.png" alt="">
+			<img src="images/cef.png" alt="">
 		</a>
 		<ul id="navigation">
 			<li>
