--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
 		<ul>
 			<li>
 				<a href="https://www.instagram.com/rocha8904/" target="blank">
-					<img src="images/green3.png" alt="">
+					<img src="images/marcelo.png" alt="">
 					<span>Marcelo Rocha</span>
 				</a>
 			</li>
 			<li>
 				<a href="https://www.instagram.com/stoned_ernas/" target="_blank">
-					<img src="images/green3.png" alt="">
+					<img src="images/ernesto.png" alt="">
 					<span>Ernesto Amândio</span>
 				</a>
 			</li>
 			<li>
 				<a href="https://www.instagram.com/acir.alberto/" target="_blank">
-					<img src="images/green3.png" alt="">
+					<img src="images/acir.png" alt="">
 					<span>Acir Alberto</span>
 				</a>
 			</li>
