--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 			<div class="article">
 				<h3>A nossa Missão</h3>
 				  <p>
-			              <strong>Devido ao surto do coronavírus, fomos obrigados a estudar a partir de casa e reconhecemos as dificuldades que veem com isso.
+			              <strong>Devido o surto do coronavírus, fomos obrigados a estudar a partir de casa e reconhecemos as dificuldades que veem com isso.
 					  Queremos ajudar os nossos colegas do curso Físicas e Biologicas da Décima Segunda classe, visto que é o nosso último ano, não desejamos a reprovação de ninguém.</strong>
 						  
 				</p>
