--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	</div>
 	<div id="footer">
 		<div>
-			<p &copy; 2020 by Riqueza CM. Todos os direitos reservados.</p>
+			<p> &copy; 2020 by Riqueza CM. Todos os direitos reservados.</p>
 			<ul>
 				<li>
 					<a href="https://twitter.com/InacioCM19" target="_blank" id="twitter">twitter</a>
