--- a/blog-single-post2.html
+++ b/blog-single-post2.html
@@ -37,12 +37,26 @@
 		<div>
 			<img src="images/green.png" alt="">
 			<div class="article">
-				<h2>Join us</h2>
+				<h2>Resumo de Biologia	Classe: 12ª	Prof. Jessé Matamba</h2>
+				<audio controls>
+					<source src="audios/jmatamba.mp3" type="audio/mpeg">
+				</audio>
+				<audio controls>
+					<source src="audios/jmatamba2.mp3" type="audio/mpeg">
+				</audio>
+								<h1>O sistema respiratório humano</h1>
 				<p>
-					Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded. What’s more, they’re absolutely free! You can do a lot with them. You can modify them. You can use them to design websites for clients, so long as you agree with the Terms of Use. You can even remove all our links if you want to.
+					As <strong>fossas nasais</strong> (ou cavidades nasais) e a boca são os locais de entrada do ar que se dirige ao nosso sistema respiratório.
+
+					<br> <strong>O ar que entra pelas fossas nasais é filtrado, umedecido e aquecido</strong>, antes de ir para a traqueia. Cílios que revestem o epitélio das fossas nasais retêm partículas de sujeira e microorganismos que existem no ar. As partículas aderem ao muco produzido pelas células epiteliais e, posteriormente, são expelidas das fossas nasais.
+                   </P>
+				   <img src="images/sistemaresp.jpg" alt="sistemaresp" height="478px" width="410px">
+			
+				<p>
+					
 				</p>
 				<p>
-					Looking for more templates? Just browse through all our Free Website Templates and find what you’re looking for. But if you don’t find any website template you can use, you can try our Free Web Design service and tell us all about it. Maybe you’re looking for something different, something special. And we love the challenge of doing something different and something special.
+					Em seguida o ar passa pela laringe (local onde se encontram as nossas cordas vocais ou pregas vocais), atravessando a glote que é a entrada da laringe. Logo acima dela há uma estrutura cartilaginosa, a epiglote, que fecha a passagem do alimento para a laringe, não havendo perigo do alimento entrar nas vias respiratórias. A seguir o ar penetra na traqueia, que se bifurca em dois brônquios principais. Cada brônquio ramifica-se inúmeras vezes e origina bronquíolos progressivamente menos calibrosos, até se formarem os bronquíolos terminais. Estes, por sua vez, terminam em bolsinhas, de parede extremamente delgada, os alvéolos pulmonares.
 				</p>
 				<p>
 					If you’re experiencing issues and concerns about this website template, join the discussion on our forum and meet other people in the community who share the same interests with you. Website Template details, discussion and updates for this Mustacchio Template. Website Template design by Free Website Templates.
