--- a/blog-single-post2.html
+++ b/blog-single-post2.html
@@ -35,7 +35,7 @@
 	<div id="body">
 		<h1><span>Matéria de biologia</span></h1>
 		<div>
-			<img src="images/green.png" alt="">
+			<img src="images/bio1.jpg" alt="">
 			<div class="article">
 				<h2>Resumo de Biologia	Classe: 12ª	Prof. Jessé Matamba</h2>
 				<audio controls>
