--- a/blog.html
+++ b/blog.html
@@ -50,12 +50,14 @@
 				</li>
 				<li>
 					<a href="blog-single-post.html" class="figure">
-						<img src="images/green2.png" alt="">
+						<img src="images/body.jpg" alt="">
 					</a>
 					<div>
 						<h3>Matéria de Biologia</h3>
 						<p>
-							Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded. What’s more, they’re absolutely free! You can do a lot with them. You can modify them.
+							As fossas nasais (ou cavidades nasais) e a boca são os locais de entrada do ar que se dirige ao nosso sistema respiratório.
+
+
 						</p>
 						<a href="blog-single-post2.html" class="more">read this</a>
 					</div>
