--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,7 @@
 						<p>
 						    Explicação básica sobre a matéria nova
 						</p>
-						<a href="blog-single-post1.html" class="more">read this</a>
+						<a href="blog-single-post1.html" class="more">ler isto</a>
 					</div>
 				</li>
 				<li>
@@ -59,7 +59,7 @@
 
 
 						</p>
-						<a href="blog-single-post2.html" class="more">read this</a>
+						<a href="blog-single-post2.html" class="more">ler isto</a>
 					</div>
 				</li>
 				<li>
@@ -71,7 +71,7 @@
 						<p>
 							Dia de entrega: hoje às 15h
 						</p>
-						<a href="blog-single-post3.html" class="more">read this</a>
+						<a href="blog-single-post3.html" class="more">ler isto</a>
 					</div>
 					
 				</li>
