--- a/blog-single-post2.html
+++ b/blog-single-post2.html
@@ -74,7 +74,7 @@ O gás carbônico se difunde do sangue para o ar alveolar, deixando livres as mo
 					A entrada de ar nos pulmões, a <strong>inspiração</strong>, se da pela contração da musculatura do diafragma e dos músculos intercostais. O diafragma abaixa e as costelas se elevam, o que aumenta o volume da caixa torácica, forçando o ar a entrar nos pulmões.
 	
 				</p>
-			              <img src="images/bio1alt.jpg" height="500px" width="500x">
+			              <img src="images/bio1.jpg" height="480px" width="266px">
 				<p>
 					A saída de ar dos pulmões, a <strong>expiração</strong>, se dá pelo relaxamento da musculatura do diafragma e dos músculos intercostais. O diafragma se eleva e as costelas abaixam, o que diminui o volume da caixa torácica, forçando o ar a sair dos pulmões.
 				</p>
