--- a/blog-single-post2.html
+++ b/blog-single-post2.html
@@ -36,7 +36,7 @@
 		<h1><span>Matéria de biologia</span></h1>
 		<div>
 			<img src="images/bio1.jpg" alt="">
-			<div class="article">
+			<div class="article" autoplay="true">
 				<h2>Resumo de Biologia	Classe: 12ª	Prof. Jessé Matamba</h2>
 				<audio controls>
 					<source src="audios/jmatamba.mp3" type="audio/mpeg">
