--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
 				
 				<h3>Como pretendemos ajudar?</h3>
 				<p>
-				   <strong>Pretendemos dar a resolução das tarefas, dar dicas de como resolver exercícios, e explicação de alguns conceitos. Mas em caso de dificuldades sérias, não resita em contactar os professores.</strong>
+				   <strong>Pretendemos dar a resolução das tarefas, dar dicas de como resolver exercícios, e explicação de alguns conceitos. Mas em caso de dificuldades sérias, não hesita em contactar os professores.</strong>
 				</p>
 				
 				<h3>Sobre esse ano</h3>
