--- a/blog.html
+++ b/blog.html
@@ -69,7 +69,7 @@
 					<div>
 						<h3>Tarefa de Biologia</h3>
 						<p>
-							Dia de entrega: hoje às 15h
+							Dia de entrega: 5/18/2020
 						</p>
 						<a href="blog-single-post3.html" class="more">ler isto</a>
 					</div>
