--- a/gallery.html
+++ b/gallery.html
@@ -33,7 +33,7 @@
 		</ul>
 	</div>
 	<div id="body">
-		<h1><span>Resolução das tarefas</span></h1>
+		<h1><span>Tarefas</span></h1>
 		<ul class="gallery">
 			<li>
 				<a href="gallery-single-post1.html" target="_blank">
