--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	</div>
 	<div id="body">
 		<div id="featured">
-			<img src="images/back1.png" alt="">
+			<img src="images/back1.jpg" alt="">
 			<div>
 				<h2>CEF</h2>
 				<span>Matéria, Tarefas, explicações</span>
