--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 	<div id="body">
 		<h1><span>Sobre o nosso site</span></h1>
 		<div>
-			<img src="images/green.png" alt="">
+			<img src="images/sobre.jpg" alt="">
 			<div class="article">
 				<h3>A nossa Missão</h3>
 				  <p style="text-align: left;">
