--- a/gallery.html
+++ b/gallery.html
@@ -37,47 +37,47 @@
 		<ul class="gallery">
 			<li>
 				<a href="gallery-single-post1.html" target="_blank">
-					<img src="images/green3.png" alt="">
+					<img src="images/tar16.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post2.html" target="_blank">
-					<img src="images/green3.png" alt="">
+					<img src="images/tar15.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post3.html" target="_blank">
-					<img src="images/green3.png" alt="">
+					<img src="images/tar18.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post4.html" target="_blank">
-					<img src="images/green3.png" alt="">
+					<img src="images/tar17" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post5.html" target="_blank">
-					<img src="images/green3.png" alt="">
+					<img src="images/tar3.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post6.html" target="_blank">
-					<img src="images/green3.png" alt="">
+					<img src="images/tar1.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post7.html" target="_blank">
-					<img src="images/green3.png" alt="">
+					<img src="images/tar4.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post8.html" target="_blank">
-					<img src="images/green3.png" alt="">
+					<img src="images/tar7.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/green3.png" alt="">
+					<img src="images/tar6.jpg" alt="">
 				</a>
 			</li>
 		</ul>
