--- a/blog.html
+++ b/blog.html
@@ -38,7 +38,7 @@
 			<ul>
 				<li>
 					<a href="blog-single-post.html" class="figure">
-						<img src="images/green2.png" alt="">
+						<img src="images/blog1.jpg" alt="">
 					</a>
 					<div>
 						<h3>Matéria de física</h3>
