--- a/gallery.html
+++ b/gallery.html
@@ -52,7 +52,7 @@
 			</li>
 			<li>
 				<a href="gallery-single-post4.html" target="_blank">
-					<img src="images/tar17" alt="">
+					<img src="images/tar17.jpg" alt="">
 				</a>
 			</li>
 			<li>
