--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
 				   Pretendemos dar a resolução das tarefas, dar dicas de como resolver exercícios, e explicação de alguns conceitos. Mas em caso de dificuldades sérias, não hesita em contactar os professores.
 				</p>
 				
-				<h3>Sobre O NOSSO SITE</h3>
+				<h3>SOBRE O NOSSO SITE</h3>
 				<p style="text-align: left;">
 				      Esse é o nosso último ano, começamos juntos e vamos terminar juntos.
 				</p>
