--- a/contact.html
+++ b/contact.html
@@ -20,10 +20,10 @@
 				<a href="index.html">home</a>
 			</li>
 			<li>
-				<a href="about.html">about us</a>
+				<a href="about.html">sobre nós</a>
 			</li>
 			<li>
-				<a href="gallery.html">Members</a>
+				<a href="gallery.html">matéria</a>
 			</li>
 			<li>
 				<a href="blog.html">blog</a>
@@ -34,7 +34,7 @@
 		</ul>
 	</div>
 	<div id="body">
-		<h1><span>let's keep in touch</span></h1>
+		<h1><span>EM CASO DE DÚVIDAS PUXA</span></h1>
 		<form action="thankyou/" method="post">
 			<input type="text" name="fname" id="fname" value="name">
 			<input type="text" name="address" id="address" value="address">
