--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			</li>
 			<li>
 				<a href="https://www.instagram.com/stoned_ernas/" target="_blank">
-					<img src="images/ernesto.png" alt="">
+					<img src="images/Ernesto.jpg" alt="">
 					<span>Ernesto Amândio</span>
 				</a>
 			</li>
