--- a/gallery-single-post1.html
+++ b/gallery-single-post1.html
@@ -33,7 +33,7 @@
 		</ul>
 	</div>
 	<div id="body">
-		<h1><span>Tarefa de Matemática</span></h1>
+		<h1><span>Tarefa de Física</span></h1>
 		<div>
 			<img src="images/green.png" alt="">
 			<div class="article">
