--- a/gallery-single-post1.html
+++ b/gallery-single-post1.html
@@ -39,7 +39,7 @@
 			<div class="article">
 				<h4>Explicação básica</h4>
 				<img src="images/fis1.jpg">
-				<pre>
+				<pre style="align-text:left;">
 				  dados                             Fórmula/resolução
 				  v0=3m/s                          VresA = Vrel &plus; Varr
                                   A e B Vrel=3m/s                  VresA = 3m/s &plus; 3m/s
