--- a/gallery-single-post1.html
+++ b/gallery-single-post1.html
@@ -36,10 +36,10 @@
 		<h1><span>Tarefa de Física</span></h1>
 		<div>
 			<img src="images/green.png" alt="">
-			<div class="article">
+			<div style="align-text:left;"class="article">
 				<h4>Explicação básica</h4>
 				<img src="images/fis1.jpg">
-				<pre style="align-text:left;">
+				<pre style="align:left;">
 				  dados                             Fórmula/resolução
 				  v0=3m/s                          VresA = Vrel &plus; Varr
                                   A e B Vrel=3m/s                  VresA = 3m/s &plus; 3m/s
