--- a/gallery-single-post1.html
+++ b/gallery-single-post1.html
@@ -35,11 +35,12 @@
 	<div id="body">
 		<h1><span>Tarefa de Física</span></h1>
 		<div>
-			<img src="images/green.png" alt="">
+			<img src="images/fis.png" alt="">
 			<div style="align-text:left;"class="article">
 				<h4>Explicação básica</h4>
 				<img src="images/fis1.jpg">
-				<pre style="align:left;">
+				<p style="text-align:left;">
+					<pre>
 				  dados                             Fórmula/resolução
 				  v0=3m/s                          VresA = Vrel &plus; Varr
                                   A e B Vrel=3m/s                  VresA = 3m/s &plus; 3m/s
@@ -48,7 +49,8 @@
 								   VresB = Vrel &minus; Varr
 								   VresB = 3m/s &minus; 3m/s
 								   VresB = 0
-                                </pre>
+                                       </pre>
+				</p>
 				
 				<p>
 				Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded. What’s more, they’re absolutely free! You can do a lot with them. You can modify them.
