--- a/gallery-single-post1.html
+++ b/gallery-single-post1.html
@@ -27,7 +27,7 @@
 			<li>
 				<a href="blog.html">blog</a>
 			</li>
-			<li>
+<li>
 				<a href="contact.html">contact</a>
 			</li>
 		</ul>
@@ -39,6 +39,9 @@
 			<div class="article">
 				<h4>Explicação básica (1)</h4>
 				
+				<video width=""320" height="240" controls>
+				  <source="images/parte1fis.mp4" type=video/mp4>				
+				</video>
 				<p style="align:left;">
 			<pre>
 		Dados                         Fórmula/Resolução
