--- a/gallery-single-post1.html
+++ b/gallery-single-post1.html
@@ -39,9 +39,8 @@
 			<div class="article">
 				<h4>Explicação básica (1)</h4>
 				
-				<video width=""320" height="240" controls>
-				  <source="images/parte1fis.mp4" type=video/mp4>				
-				</video>
+				<iframe width="560" height="315" src="images/parte1fis.mp4" frameborder="0" allowfullscreen></iframe>
+      </iframe>
 				<p style="align:left;">
 			<pre>
 		Dados                         Fórmula/Resolução
