--- a/gallery-single-post1.html
+++ b/gallery-single-post1.html
@@ -39,8 +39,11 @@
 			<div class="article">
 				<h4>Explicação básica (1)</h4>
 				
-				<iframe width="560" height="315" src="images/parte1fis.mp4" frameborder="0" allowfullscreen></iframe>
-      </iframe>
+				<video controls width="350" height="250" controls>
+                                  <source="images/parte1fis.mp4" type="video/mp4"
+					  </video>	  
+                            
+
 				<p style="align:left;">
 			<pre>
 		Dados                         Fórmula/Resolução
