--- a/gallery-single-post1.html
+++ b/gallery-single-post1.html
@@ -40,7 +40,7 @@
 				<h4>Explicação básica (1)</h4>
 				
 				<video controls width="350" height="250" controls>
-                                  <source="images/parte1fis.mp4" type="video/mp4"
+                                  <source src="images/parte1fis.mp4" type="video/mp4"
 					  </video>	  
                             
 
