--- a/gallery-single-post1.html
+++ b/gallery-single-post1.html
@@ -39,7 +39,7 @@
 			<div class="article">
 				<h4>Explicação básica (1)</h4>
 				
-				<video controls width="350" height="250" controls>
+				<video width="320" height="240" controls>
                                   <source src="images/parte1fis.mp4" type="video/mp4"
 					  </video>	  
                             
