--- a/gallery-single-post1.html
+++ b/gallery-single-post1.html
@@ -46,11 +46,11 @@
 	Dados                 Fórmula/Resolução
 		
 	v0=3m/s              VresA = Vrel &plus; Varr
-        A e B Vrel=3m/s      VresA = 3m/s &plus; 3m/s
-		             VresA = 6m/s
+        A Vrel=3m/s          VresA = 3m/s &plus; 3m/s
+	B Vrel=-3m/s	     VresA = 6m/s
 								   
                              VresB = Vrel &minus; Varr 
-			     VresB = 3m/s &minus; 3m/s
+			     VresB = -3m/s &minus; 3m/s
 			     VresB = 0
         </pre>
 				</p>
