--- a/blog-single-post3.html
+++ b/blog-single-post3.html
@@ -39,7 +39,19 @@
 			<div class="article">
 				<h2>O movimento relativo</h2>
 				<p>
-					
+					Olá, bom dia!
+
+De acordo com a Física, o movimento é, na realidade, sempre um conceito relativo, pois dependerá de um sistema de referência ou de referencial particular, à escolha do observador.
+
+Sendo assim, todo o conceito de movimento ou de repouso são relativos, pois dependerão da ótica de quem observa e/ou do referencial adotado.
+
+Por exemplo: quando estamos dentro de um carro em movimento em uma pista e vemos as árvores do lado de fora, para nós elas também estão em movimento; porém, na realidade, elas estão em repouso (também relativo).
+
+Importante lembrar, também, que não existem os chamados movimentos absolutos e repouso absolutos.
+
+Espero ter ajudado!
+
+
 				</p>
 				<p>
 					
