--- a/blog-single-post2.html
+++ b/blog-single-post2.html
@@ -38,12 +38,14 @@
 			<img src="images/bio1.jpg" alt="">
 			<div class="article" autoplay="true">
 				<h2>Resumo de Biologia	Classe: 12ª	Prof. Jessé Matamba</h2>
+			<div>
 				<audio controls>
 					<source src="audios/jmatamba.mp3" type="audio/mpeg">
 				</audio>
 				<audio controls>
 					<source src="audios/jmatamba2.mp3" type="audio/mpeg">
 				</audio>
+			</div>
 								<h1>O sistema respiratório humano</h1>
 				<p style="text-align: left;">
 					As <strong>fossas nasais</strong> (ou cavidades nasais) e a boca são os locais de entrada do ar que se dirige ao nosso sistema respiratório.
