--- a/blog-single-post3.html
+++ b/blog-single-post3.html
@@ -39,7 +39,7 @@
 			<div class="article">
 				<h2>O movimento relativo</h2>
 				
-				<img src="ïmages/qui.png">
+				<img src="images/qui.png">
 				<p>
 					Olá, bom dia!
 
