--- a/blog-single-post1.html
+++ b/blog-single-post1.html
@@ -39,13 +39,15 @@
 			<div class="article">
 				<h2>Movimento Relativo</h2>
 				<p>
-					<strong>O Movimento de um corpo,visto por um observador, depende do referencial no qual o observador está situado.</strong>
-				</p>
-				<p>
-					Looking for more templates? Just browse through all our Free Website Templates and find what you’re looking for. But if you don’t find any website template you can use, you can try our Free Web Design service and tell us all about it. Maybe you’re looking for something different, something special. And we love the challenge of doing something different and something special.
-				</p>
-				<p>
-					If you’re experiencing issues and concerns about this website template, join the discussion on our forum and meet other people in the community who share the same interests with you. Website Template details, discussion and updates for this Mustacchio Template. Website Template design by Free Website Templates.
+					De acordo com a Física, o movimento é, na realidade, sempre um conceito relativo, pois dependerá de um sistema de referência ou de referencial particular, à escolha do observador.
+
+Sendo assim, todo o conceito de movimento ou de repouso são relativos, pois dependerão da ótica de quem observa e/ou do referencial adotado.
+
+Por exemplo: quando estamos dentro de um carro em movimento em uma pista e vemos as árvores do lado de fora, para nós elas também estão em movimento; porém, na realidade, elas estão em repouso (também relativo).
+
+Importante lembrar, também, que não existem os chamados movimentos absolutos e repouso absolutos.
+
+Espero ter ajudado!
 				</p>
 			</div>
 		</div>
