--- a/blog-single-post1.html
+++ b/blog-single-post1.html
@@ -37,9 +37,9 @@
 		<div>
 			<img src="images/movimentorel.jpg" alt="">
 			<div class="article">
-				<h2>Movimento Relativo</h2>
+				<h2> O Movimento Relativo</h2>
 				<p>
-					De acordo com a Física, o movimento é, na realidade, sempre um conceito relativo, pois dependerá de um sistema de referência ou de referencial particular, à escolha do observador.
+					Olá bom dia. De acordo com a Física, o movimento é, na realidade, sempre um conceito relativo, pois dependerá de um sistema de referência ou de referencial particular, à escolha do observador.
 
 Sendo assim, todo o conceito de movimento ou de repouso são relativos, pois dependerão da ótica de quem observa e/ou do referencial adotado.
 
