--- a/blog.html
+++ b/blog.html
@@ -67,9 +67,9 @@
 						<img src="images/green2.png" alt="">
 					</a>
 					<div>
-						<h3>Tarefa de Biologia</h3>
+						<h3>Matéria de Química</h3>
 						<p>
-							Dia de entrega: 5/18/2020
+							Alcinos...
 						</p>
 						<a href="blog-single-post3.html" class="more">ler isto</a>
 					</div>
