--- a/blog.html
+++ b/blog.html
@@ -64,7 +64,7 @@
 				</li>
 				<li>
 					<a href="blog-single-post.html" class="figure">
-						<img src="images/green2.png" alt="">
+						<img src="images/quim1.jpg" alt="">
 					</a>
 					<div>
 						<h3>Matéria de Química</h3>
