--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,7 @@
 		<ul class="gallery">
 			<li>
 				<a href="gallery-single-post1.html" target="_blank">
-					<img src="images/tar16.jpg" alt="">
+					<img src="images/physcs.jpg" alt="">
 				</a>
 			</li>
 			<li>
