--- a/gallery.html
+++ b/gallery.html
@@ -80,6 +80,11 @@
 					<img src="images/tar6.jpg" alt="">
 				</a>
 			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar2.jpg" alt="">
+				</a>
+			</li>
 		</ul>
 	</div>
 	<div id="footer">
