--- a/gallery.html
+++ b/gallery.html
@@ -80,12 +80,59 @@
 					<img src="images/tar6.jpg" alt="">
 				</a>
 			</li>
+			
+		</ul>
+		
+		<h1><span> Mais T a r e f a s</span></h1>
+		<ul class="gallery">
 			<li>
-				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar2.jpg" alt="">
+				<a href="gallery-single-post1.html" target="_blank">
+					<img src="images/physcs.jpg" alt="">
 				</a>
 			</li>
+			<li>
+				<a href="gallery-single-post2.html" target="_blank">
+					<img src="images/tar15.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post3.html" target="_blank">
+					<img src="images/tar18.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post4.html" target="_blank">
+					<img src="images/tar17.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post5.html" target="_blank">
+					<img src="images/tar3.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post6.html" target="_blank">
+					<img src="images/tar1.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post7.html" target="_blank">
+					<img src="images/tar4.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post8.html" target="_blank">
+					<img src="images/tar7.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			
 		</ul>
+		
 	</div>
 	<div id="footer">
 		<div>
