--- a/blog-single-post1.html
+++ b/blog-single-post1.html
@@ -35,8 +35,11 @@
 	<div id="body">
 		<h1><span>Matéria de Física</span></h1>
 		<div>
-			<iframe width="100%" height="250" src="blob:https://www.youtube.com/76eeb679-d1ff-4f30-bdf9-19905382122c" frameborder="0" allow="accelerometer; 
+			<iframe width="100%" height="250" src="https://www.youtube.com/embed/IU2ls6d7q1g" frameborder="0" allow="accelerometer; 
                         autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+			
+			<video tabindex="-1" class="video-stream html5-main-video" controlslist="nodownload" style="width: 330px; height: 186px; left: 0px; top: 32.1875px;" 
+			       src="blob:https://www.youtube.com/76eeb679-d1ff-4f30-bdf9-19905382122c"></video>
 			
 			<div class="article">
 				<h2> O Movimento Relativo</h2>
