--- a/blog-single-post1.html
+++ b/blog-single-post1.html
@@ -35,11 +35,9 @@
 	<div id="body">
 		<h1><span>Matéria de Física</span></h1>
 		<div>
-			<iframe width="100%" height="250" src="https://www.youtube.com/watch?v=l9UI5_W63Rc&pp=wgIECgIIAQ==" frameborder="0" allow="accelerometer; 
-                        autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/vGHrJDmepI0" 
+				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			
-			<video tabindex="-1" class="video-stream html5-main-video" controlslist="nodownload" style="width: 330px; height: 186px; left: 0px; top: 32.1875px;" 
-			       src="https://www.youtube.com/watch?v=l9UI5_W63Rc&pp=wgIECgIIAQ=="></video>
 			
 			<div class="article">
 				<h2> O Movimento Relativo</h2>
