--- a/gallery.html
+++ b/gallery.html
@@ -33,7 +33,7 @@
 		</ul>
 	</div>
 	<div id="body">
-		<h1><span>T a r e f a s</span></h1>
+		<h1><span>F Í S I C A</span></h1>
 		<ul class="gallery">
 			<li>
 				<a href="gallery-single-post1.html" target="_blank">
@@ -70,9 +70,32 @@
 					<img src="images/tar4.jpg" alt="">
 				</a>
 			</li>
+			<h1><span> M A T E M Á T I C A</span></h1>
+		</ul class="gallery">
+		<ul>
 			<li>
 				<a href="gallery-single-post8.html" target="_blank">
 					<img src="images/tar7.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
 				</a>
 			</li>
 			<li>
