--- a/gallery.html
+++ b/gallery.html
@@ -65,17 +65,47 @@
 					<img src="images/tar1.jpg" alt="">
 				</a>
 			</li>
+		</ul>
+			
+		  <h1><span> M A T E M Á T I C A</span></h1>
+		<ul class="gallery">
 			<li>
 				<a href="gallery-single-post7.html" target="_blank">
 					<img src="images/tar4.jpg" alt="">
 				</a>
 			</li>
-			<h1><span> M A T E M Á T I C A</span></h1>
-		</ul class="gallery">
-		<ul>
+			
 			<li>
 				<a href="gallery-single-post8.html" target="_blank">
 					<img src="images/tar7.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+		</ul>
+				  <h1><span> Q U Í M I C A</span></h1>
+		<ul class="gallery">
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
 				</a>
 			</li>
 			<li>
@@ -105,8 +135,160 @@
 			</li>
 			
 		</ul>
+				  <h1><span> F I L O S O F I A </span></h1>
+		<ul class="gallery">
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+		</ul>
 		
+				  <h1><span> B I O L O G I A</span></h1>
+		<ul class="gallery">
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+		</ul>
 		
+				  <h1><span> L.P O R T U G U E S A</span></h1>
+		<ul class="gallery">
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+		</ul>
+		
+				  <h1><span> G.D</span></h1>
+		<ul class="gallery">
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+		</ul>
+		
+				  <h1><span> P S I C O L O G I A</span></h1>
+		<ul class="gallery">
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+		</ul>
 		
 	</div>
 	<div id="footer">
