--- a/gallery.html
+++ b/gallery.html
@@ -162,10 +162,20 @@
 					<img src="images/tar6.jpg" alt="">
 				</a>
 			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
 		</ul>
 		
 				  <h1><span> B I O L O G I A</span></h1>
 		<ul class="gallery">
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
 					<img src="images/tar6.jpg" alt="">
@@ -225,6 +235,11 @@
 					<img src="images/tar6.jpg" alt="">
 				</a>
 			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
 		</ul>
 		
 				  <h1><span> G.D</span></h1>
@@ -254,10 +269,59 @@
 					<img src="images/tar6.jpg" alt="">
 				</a>
 			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
 		</ul>
 		
 				  <h1><span> P S I C O L O G I A</span></h1>
 		<ul class="gallery">
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
+		</ul>
+		
+		<h1><span> I N G L Ê S</span></h1>
+		<ul class="gallery">
+			<li>
+				<a href="gallery-single-post9.html" target="_blank">
+					<img src="images/tar6.jpg" alt="">
+				</a>
+			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
 					<img src="images/tar6.jpg" alt="">
