--- a/gallery-single-post2.html
+++ b/gallery-single-post2.html
@@ -33,12 +33,12 @@
 		</ul>
 	</div>
 	<div id="body">
-		<h1><span>Tarefa de Matemática pt1</span></h1>
+		<h1><span>FÍSICA</span></h1>
 		<div>
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/atZ2CynfN5A"
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<div class="article">
-				<h4>Centro de Massa</h4>
+				<h4>Centro de Massa pt1</h4>
 				<p>
 				  Centro de Massa....
 				</p>
