--- a/gallery.html
+++ b/gallery.html
@@ -42,27 +42,27 @@
 			</li>
 			<li>
 				<a href="gallery-single-post2.html" target="_blank">
-					<img src="images/tar15.jpg" alt="">
+					<img src="images/physcs.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post3.html" target="_blank">
-					<img src="images/tar18.jpg" alt="">
+					<img src="images/physcs.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post4.html" target="_blank">
-					<img src="images/tar17.jpg" alt="">
+					<img src="images/physcs.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post5.html" target="_blank">
-					<img src="images/tar3.jpg" alt="">
+					<img src="images/physcs.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post6.html" target="_blank">
-					<img src="images/tar1.jpg" alt="">
+					<img src="images/physcs.jpg" alt="">
 				</a>
 			</li>
 		</ul>
@@ -71,33 +71,33 @@
 		<ul class="gallery">
 			<li>
 				<a href="gallery-single-post7.html" target="_blank">
-					<img src="images/tar4.jpg" alt="">
+					<img src="images/mat.jpg" alt="">
 				</a>
 			</li>
 			
 			<li>
 				<a href="gallery-single-post8.html" target="_blank">
-					<img src="images/tar7.jpg" alt="">
+					<img src="images/mat.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/mat.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/mat.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/mat.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/mat.jpg" alt="">
 				</a>
 			</li>
 		</ul>
@@ -105,32 +105,32 @@
 		<ul class="gallery">
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/química.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/química.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/química.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/química.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/química.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/química.jpg" alt="">
 				</a>
 			</li>
 			
@@ -139,32 +139,32 @@
 		<ul class="gallery">
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/filosofia.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/filosofia.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/filosofia.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/filosofia.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/filosofia.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/filosofia.jpg" alt="">
 				</a>
 			</li>
 		</ul>
@@ -173,32 +173,32 @@
 		<ul class="gallery">
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/bio.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/bio.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/bio.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/bio.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/bio.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/bio.jpg" alt="">
 				</a>
 			</li>
 		</ul>
@@ -207,22 +207,22 @@
 		<ul class="gallery">
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/tar16.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/tar16.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/tar16.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/tar16.jpg" alt="">
 				</a>
 			</li>
 			<li>
@@ -241,32 +241,32 @@
 		<ul class="gallery">
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/tar12.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/tar12.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/tar12.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/tar12.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/tar12.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/tar12.jpg" alt="">
 				</a>
 			</li>
 		</ul>
@@ -275,32 +275,32 @@
 		<ul class="gallery">
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/psic.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/psic.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/psic.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/psic.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/psic.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/psic.jpg" alt="">
 				</a>
 			</li>
 		</ul>
@@ -309,32 +309,32 @@
 		<ul class="gallery">
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/english.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/english.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/english.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/english.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/english.jpg" alt="">
 				</a>
 			</li>
 			<li>
 				<a href="gallery-single-post9.html" target="_blank">
-					<img src="images/tar6.jpg" alt="">
+					<img src="images/english.jpg" alt="">
 				</a>
 			</li>
 		</ul>
